[gd_scene load_steps=17 format=2]

[ext_resource path="res://Scripts/GTG.gd" type="Script" id=1]
[ext_resource path="res://Effects/ParallaxBackground.tscn" type="PackedScene" id=2]
[ext_resource path="res://Effects/ParallaxBackgroundFront1.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/background6.png" type="Texture" id=4]
[ext_resource path="res://Neutralfonts/Arvo48.tres" type="DynamicFont" id=5]
[ext_resource path="res://Assets/return1icon.png" type="Texture" id=6]
[ext_resource path="res://Effects/Time.tscn" type="PackedScene" id=7]
[ext_resource path="res://Neutralfonts/Arvo36.tres" type="DynamicFont" id=8]
[ext_resource path="res://Effects/GeneralTheme2.tres" type="Theme" id=9]
[ext_resource path="res://Buttons/MinigameReset_.tscn" type="PackedScene" id=10]
[ext_resource path="res://Buttons/MinigameStartStop_.tscn" type="PackedScene" id=11]
[ext_resource path="res://Effects/Fade_in.tscn" type="PackedScene" id=12]
[ext_resource path="res://Effects/Fade_out.tscn" type="PackedScene" id=13]

[sub_resource type="StyleBoxEmpty" id=1]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=2]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=3]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0

[node name="Minigames" type="Control"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 1520.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )
_sections_unfolded = [ "Anchor", "Margin", "Rect" ]
__meta__ = {
"_edit_lock_": true
}

[node name="ParallaxBackground" type="ParallaxBackground" parent="." index="0"]

layer = -1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )
scroll_offset = Vector2( 0, 0 )
scroll_base_offset = Vector2( 0, 0 )
scroll_base_scale = Vector2( 1, 1 )
scroll_limit_begin = Vector2( 0, 0 )
scroll_limit_end = Vector2( 0, 0 )
scroll_ignore_camera_zoom = true

[node name="Mainbg1" parent="ParallaxBackground" index="0" instance=ExtResource( 2 )]

[node name="Mainbg2" parent="ParallaxBackground" index="1" instance=ExtResource( 3 )]

[node name="Transparentbg1" type="Sprite" parent="ParallaxBackground" index="2"]

texture = ExtResource( 4 )
offset = Vector2( 360, 760 )
_sections_unfolded = [ "Offset" ]
__meta__ = {
"_edit_lock_": true
}

[node name="CenterContainer" type="Node2D" parent="." index="1"]

_sections_unfolded = [ "Anchor" ]

[node name="Label" type="Label" parent="CenterContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 720.0
margin_bottom = 59.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0.929412, 0.0862745, 0.317647, 1 )
custom_constants/shadow_offset_x = 5
custom_constants/shadow_offset_y = 5
text = "Minigames"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Hint", "Rect", "custom_colors", "custom_constants", "custom_fonts" ]
__meta__ = {
"_edit_lock_": true
}

[node name="GuessTheGesture!" type="Label" parent="CenterContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 110.0
margin_right = 720.0
margin_bottom = 169.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0.929412, 0.0862745, 0.317647, 1 )
custom_constants/shadow_offset_x = 5
custom_constants/shadow_offset_y = 5
text = "Guess The Gesture!"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Hint", "Rect", "custom_colors", "custom_constants", "custom_fonts" ]
__meta__ = {
"_edit_lock_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Margin", "Rect" ]
__meta__ = {
"_edit_lock_": true
}

[node name="Button" type="Button" parent="CenterContainer/VBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 109.0
margin_bottom = 102.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
group = null
icon = ExtResource( 6 )
flat = true
align = 1

[node name="GuessTheGesture" type="Node2D" parent="." index="2"]

[node name="ScoreTime" type="GridContainer" parent="GuessTheGesture" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 550.0
margin_right = 720.0
margin_bottom = 645.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/hseparation = 50
columns = 2
_sections_unfolded = [ "Rect" ]

[node name="Score" type="Label" parent="GuessTheGesture/ScoreTime" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 71.0
margin_right = 264.0
margin_bottom = 59.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 6
size_flags_vertical = 5
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0.929412, 0.0862745, 0.317647, 1 )
custom_constants/shadow_offset_x = 5
custom_constants/shadow_offset_y = 5
text = "Score: 0"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Focus", "Hint", "Rect", "Size Flags", "custom_colors", "custom_constants", "custom_fonts" ]
__meta__ = {
"_edit_lock_": true
}

[node name="Time" parent="GuessTheGesture/ScoreTime" index="1" instance=ExtResource( 7 )]

[node name="Hint" type="Label" parent="GuessTheGesture" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 960.0
margin_right = 720.0
margin_bottom = 1019.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0.929412, 0.0862745, 0.317647, 1 )
custom_constants/shadow_offset_x = 5
custom_constants/shadow_offset_y = 5
text = "Hint"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Focus", "Hint", "Rect", "custom_colors", "custom_constants", "custom_fonts" ]
__meta__ = {
"_edit_lock_": true
}

[node name="HintText" type="Label" parent="GuessTheGesture" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 1020.0
margin_right = 720.0
margin_bottom = 1440.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0.376471, 0.403922, 1 )
custom_constants/shadow_offset_x = 5
custom_constants/shadow_offset_y = 5
text = "If you can see this, please report this to the developers.
AKA Yousef Ibrahim or Hady Abdulfattah
Thanks!"
align = 1
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_colors", "custom_fonts" ]

[node name="GTGtext" type="LineEdit" parent="GuessTheGesture" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 660.0
margin_right = 720.0
margin_bottom = 719.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 1
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 9 )
custom_styles/read_only = SubResource( 1 )
custom_styles/focus = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
align = 1
max_length = 16
editable = false
focus_mode = 2
context_menu_enabled = false
placeholder_text = "Press on Start."
placeholder_alpha = 0.6
caret_blink = true
caret_blink_speed = 0.65
caret_position = 0
_sections_unfolded = [ "Anchor", "Caret", "Grow Direction", "Margin", "Material", "Pause", "Placeholder", "Rect", "Size Flags", "Theme", "Visibility", "custom_constants", "custom_styles" ]

[node name="Timerbuttons" type="GridContainer" parent="GuessTheGesture" index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 750.0
margin_right = 720.0
margin_bottom = 845.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/hseparation = 50
columns = 2
_sections_unfolded = [ "Rect" ]

[node name="Reset_" parent="GuessTheGesture/Timerbuttons" index="0" instance=ExtResource( 10 )]

[node name="StartStop_" parent="GuessTheGesture/Timerbuttons" index="1" instance=ExtResource( 11 )]

[node name="Container" type="Container" parent="GuessTheGesture" index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 200.0
margin_top = 205.0
margin_right = 600.0
margin_bottom = 522.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 4
size_flags_vertical = 4
_sections_unfolded = [ "Anchor", "Grow Direction", "Rect", "Size Flags" ]

[node name="Fade" parent="." index="3" instance=ExtResource( 12 )]

visible = false

[node name="Fade2" parent="." index="4" instance=ExtResource( 13 )]

visible = false

[connection signal="pressed" from="CenterContainer/VBoxContainer/Button" to="." method="_on_Button_pressed"]

[connection signal="text_changed" from="GuessTheGesture/GTGtext" to="." method="_on_GTGtext_text_changed"]

[connection signal="pressed" from="GuessTheGesture/Timerbuttons/Reset_" to="." method="_on_Reset__pressed"]

[connection signal="pressed" from="GuessTheGesture/Timerbuttons/StartStop_" to="." method="_on_StartStop__pressed"]

[connection signal="fade_finished" from="Fade" to="." method="_on_Fade_fade_finished"]

[connection signal="fade_finished" from="Fade2" to="." method="_on_Fade2_fade_finished"]


